syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "kyobobook.grpc.sample";
option java_outer_classname = "SampleProto";

service Sample {
  rpc SelectGrpcSample ( SampleRequest ) returns ( stream SampleResponse ) {}
  rpc GetGrpcSample ( SampleRequest ) returns ( SampleResponse ) {}
  rpc InsertGrpcSample ( SampleRequest ) returns ( ResponseResult ) {}
  rpc UpdateGrpcSample ( SampleRequest ) returns ( ResponseResult ) {}
  rpc DeleteGrpcSample ( SampleRequest ) returns ( ResponseResult) {}
}

message SampleRequest {
  int32 seq = 1;
  string title = 2;
  string contents = 3;
  string txt = 4;
  
  enum ReqType {
    MASTER = 0;
    SLAVE = 1;
    SUB = 2;
  }
  
  ReqType reqType = 5;
}

message SampleFieldEntry {
  int32 seq = 1;
  string title = 2;
  string contents = 3;
  string txt = 4;
  bool result = 5;
}

message ResponseResult {
  int32 result_code = 1;
  string result_message = 2;
  string detail_message = 3;
}

message SampleResponse {
  SampleFieldEntry result = 1;
  ResponseResult responseResult = 2;
}

